--- a/www/index.html
+++ b/www/index.html
@@ -264,7 +264,7 @@
                 <div class="col s6 m6" style="text-align: end"><span >240/500</span></div>
             </div>
         <div class="col s12 m12 edit_profile_bottom" >
-            <P>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</P>
+            <textarea name="comment" form="usrform" placeholder="Enter text here..." style="max-width:100%;height:150px;border: none;"></textarea>
         </div>
         </div>
     </script>
@@ -773,8 +773,8 @@
         </div>
          <div class="row sendForm">
              <div class="col s12">
-                 <input type="text" style="width: Calc(100% - 42px);">
                  <button type="button" class="btn btn-floating "><i class="fa fa-send"></i></button>
+                 <input type="text" style="width: Calc(100% - 42px);">
              </div>
          </div>
     </script>
@@ -947,7 +947,7 @@
                         <div class="col s4 m3" style="font-size: x-large;">Alexander</div>
                         <div class="col s6 m3" style="font-size: small;vertical-align: middle;text-align: end;padding: 10px;">sadasdsadada</div>
                         <div class="col s12 m12  center" >
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
                         </div>
                     </div>
 
