--- a/www/index.html
+++ b/www/index.html
@@ -107,7 +107,7 @@
     </div>
     <!-- page loader end-->
     <!-- Page Content Start -->
-    <div id="contentView" style="padding-top: 50px;">
+    <div id="contentView" style="padding-top: 58px;">
 
     </div>
     <!-- Page Content End -->
@@ -683,128 +683,57 @@
         <div class="couponss messageBox">
 
             <ul class="collection  scrolls">
+
                 <li class="collection-item row ">
-                    <div class="col s2 padding0">
+                    <div class="col s2 ">
                         <img src="img/profile_pic_03.png" class=" responsive-img chatImg">
                     </div>
-                    <div class="col s10 left-align">
-                        <p>Troika</p>
-                        <p class="margin5 msgText">How are you </p>
-                        <p class="margin5">3 min ago</p>
+                    <div class="col s10 left-align bubble_msg_left">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
                     </div>
                 </li>
                 <li class="collection-item row ">
-                    <div class="col s10 right-align">
-                        <p>Troika</p>
-                        <p class="margin5 msgText">How are you</p>
-                        <p class="margin5">3 min ago</p>
+                    <div class="col s10 right-align bubble_msg_right">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
                     </div>
-                    <div class="col s2 padding0">
+                    <div class="col s2 ">
                         <img src="img/profile_pic_03.png" class=" responsive-img chatImg">
                     </div>
 
                 </li>
+
+
                 <li class="collection-item row ">
-                    <div class="col s2 padding0">
+                    <div class="col s2 ">
                         <img src="img/profile_pic_03.png" class=" responsive-img chatImg">
                     </div>
-                    <div class="col s10 left-align">
-                        <p>Troika</p>
-                        <p class="margin5 msgText">How are you </p>
-                        <p class="margin5">3 min ago</p>
+                    <div class="col s10 left-align bubble_msg_left">
+                        It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
                     </div>
                 </li>
                 <li class="collection-item row ">
-                    <div class="col s10 right-align">
-                        <p>Troika</p>
-                        <p class="margin5 msgText">How are you</p>
-                        <p class="margin5">3 min ago</p>
+                    <div class="col s10 right-align bubble_msg_right">
+                        when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
                     </div>
-                    <div class="col s2 padding0">
+                    <div class="col s2 ">
                         <img src="img/profile_pic_03.png" class=" responsive-img chatImg">
                     </div>
 
                 </li>
-                <li class="collection-item row ">
-                    <div class="col s2 padding0">
-                        <img src="img/profile_pic_03.png" class=" responsive-img chatImg">
-                    </div>
-                    <div class="col s10 left-align">
-                        <p>Troika</p>
-                        <p class="margin5 msgText">How are you </p>
-                        <p class="margin5">3 min ago</p>
-                    </div>
-                </li>
-                <li class="collection-item row ">
-                    <div class="col s10 right-align">
-                        <p>Troika</p>
-                        <p class="margin5 msgText">How are you</p>
-                        <p class="margin5">3 min ago</p>
-                    </div>
-                    <div class="col s2 padding0">
-                        <img src="img/profile_pic_03.png" class=" responsive-img chatImg">
-                    </div>
 
-                </li>
                 <li class="collection-item row ">
-                    <div class="col s2 padding0">
+                    <div class="col s2 ">
                         <img src="img/profile_pic_03.png" class=" responsive-img chatImg">
                     </div>
-                    <div class="col s10 left-align">
-                        <p>Troika</p>
-                        <p class="margin5 msgText">How are you </p>
-                        <p class="margin5">3 min ago</p>
+                    <div class="col s10 left-align bubble_msg_left">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry
                     </div>
                 </li>
                 <li class="collection-item row ">
-                    <div class="col s10 right-align">
-                        <p>Troika</p>
-                        <p class="margin5 msgText">How are you</p>
-                        <p class="margin5">3 min ago</p>
+                    <div class="col s10 right-align bubble_msg_right">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
                     </div>
-                    <div class="col s2 padding0">
-                        <img src="img/profile_pic_03.png" class=" responsive-img chatImg">
-                    </div>
-
-                </li>
-                <li class="collection-item row ">
-                    <div class="col s2 padding0">
-                        <img src="img/profile_pic_03.png" class=" responsive-img chatImg">
-                    </div>
-                    <div class="col s10 left-align">
-                        <p>Troika</p>
-                        <p class="margin5 msgText">How are you </p>
-                        <p class="margin5">3 min ago</p>
-                    </div>
-                </li>
-                <li class="collection-item row ">
-                    <div class="col s10 right-align">
-                        <p>Troika</p>
-                        <p class="margin5 msgText">How are you</p>
-                        <p class="margin5">3 min ago</p>
-                    </div>
-                    <div class="col s2 padding0">
-                        <img src="img/profile_pic_03.png" class=" responsive-img chatImg">
-                    </div>
-
-                </li>
-                <li class="collection-item row ">
-                    <div class="col s2 padding0">
-                        <img src="img/profile_pic_03.png" class=" responsive-img chatImg">
-                    </div>
-                    <div class="col s10 left-align">
-                        <p>Troika</p>
-                        <p class="margin5 msgText">How are you </p>
-                        <p class="margin5">3 min ago</p>
-                    </div>
-                </li>
-                <li class="collection-item row ">
-                    <div class="col s10 right-align">
-                        <p>Troika</p>
-                        <p class="margin5 msgText">How are you</p>
-                        <p class="margin5">3 min ago</p>
-                    </div>
-                    <div class="col s2 padding0">
+                    <div class="col s2 ">
                         <img src="img/profile_pic_03.png" class=" responsive-img chatImg">
                     </div>
 
@@ -812,12 +741,12 @@
 
             </ul>
         </div>
-         <div class="row sendForm">
-             <div class="col s12">
-                 <input type="text" style="width: 80%;">
-                 <button type="button" class="btn btn-floating "><i class="fa fa-send"></i></button>
-             </div>
-         </div>
+        <div class="row sendForm">
+            <div class="col s12">
+                <input type="text" style="width: 80%;">
+                <button type="button" class="btn btn-floating "><i class="fa fa-send"></i></button>
+            </div>
+        </div>
     </script>
     <!--Coupon end-->
 
