--- a/www/index.html
+++ b/www/index.html
@@ -193,12 +193,21 @@
     <script type="text/html" id="profileTemplate">
         <div class="height100vh" style="background-color: #2b2b2a">
         <br>
-        <div class="center edit_profile_txt">Edit Profile</div>
+        <form enctype="multipart/form-data" acttion="" onsubmit="event.preventDefault();app.editProfileForm(this);" method="post">
+            <div class="center edit_profile_txt" >
+                <span onclick="$(this).toggle().next().toggle();$('.editBtnfile').show();">Edit Profile</span>
+                <div style="display:none;">
+                    <button class="btn btn-primaty" type="submit">Save</button>
+                    <button class="btn btn-primaty" type="button" onclick="app.profileLink();">Cancle</button>
+                </div>
+            </div>
         <div class="row edit_profile "  >
 
                 <div class="row padding_margin_null" >
                 <div class="col s8 m8 padding_margin_null">
-                    <img src="img/edit_profile_big.jpg" class="responsive-img" >
+                    <button type="button" class="btn btn-floating btnFlotEdit editBtnfile" style="display:none;"><i class="fa fa-pencil"></i></button>
+                    <input type="file" name="u_logo" class="ulogoFile editBtnfile" style="display:none;" onchange="app.previewImage(this);">
+                    <img src="_u_logo_" class="responsive-img" >
                 </div>
                 <div class="col s4 m4 padding_margin_null" >
                     <img src="img/edit_profile_plus.jpg" class="responsive-img">
@@ -224,8 +233,10 @@
                 <div class="col s6 m6" style="text-align: end"><span >240/500</span></div>
             </div>
         <div class="col s12 m12 edit_profile_bottom" >
-            <textarea name="comment" form="usrform" placeholder="Enter text here..." style="max-width:100%;height:150px;border: none;"></textarea>
+            <textarea name="u_about"  placeholder="Enter text here..." style="max-width:100%;height:150px;border: none;">_u_about_</textarea>
         </div>
+        
+        </form>
         </div>
     </script>
 
@@ -402,8 +413,8 @@
                 </div>
                 <div class="row">
                     <div class="input-field col s12">
-                        <input id="u_zip" type="text" name="u_zip" class="validate">
-                        <label for="u_zip">Postcode</label>
+                        <input id="u_age" type="number" name="u_age" class="validate">
+                        <label for="u_age">Age</label>
                     </div>
                 </div>
 
@@ -431,7 +442,7 @@
                     <!-- Switch -->
                     <div class="switch inlineblock" >
                         <label>
-                            <input type="checkbox" id="test" checked onchange="console.log(this.value);">
+                            <input type="checkbox" id="test" _u_notification_match_ onchange="app.updateUser({u_notification_match:~~$(this).prop('checked')});">
                             <span class="lever"></span>
                         </label>
                     </div>
@@ -445,7 +456,7 @@
                     <!-- Switch -->
                     <div class="switch inlineblock" >
                         <label>
-                            <input type="checkbox">
+                            <input type="checkbox" _u_notification_message_ onchange="app.updateUser({u_notification_message:~~$(this).prop('checked')});">
                             <span class="lever"></span>
                         </label>
                     </div>
@@ -459,7 +470,7 @@
                     <!-- Switch -->
                     <div class="switch inlineblock" >
                         <label>
-                            <input type="checkbox">
+                            <input type="checkbox" _u_notification_coupon_ onchange="app.updateUser({u_notification_coupon:~~$(this).prop('checked')});">
                             <span class="lever"></span>
                         </label>
                     </div>
@@ -473,7 +484,7 @@
                     <!-- Switch -->
                     <div class="switch inlineblock" >
                         <label>
-                            <input type="checkbox">
+                            <input type="checkbox" _notificationSound_ onchange="localStorage['notificationSound']=app.notificationSound=~~$(this).prop('checked');">
                             <span class="lever"></span>
                         </label>
                     </div>
@@ -487,7 +498,7 @@
                     <!-- Switch -->
                     <div class="switch inlineblock" >
                         <label>
-                            <input type="checkbox">
+                            <input type="checkbox" _notificationVibrate_  onchange="localStorage['notificationVibrate']=app.notificationVibrate=~~$(this).prop('checked');">
                             <span class="lever"></span>
                         </label>
                     </div>
